lab1/Test/L1-A-1-33.cmm
float GX0wlP84QHPmPL4l9 ( ) {
  if ( ci5VHBCP3hNHHV3T3 )   Sjyolf1AfmJuAZPUdK ;
else   if ( Aorvwp5cGKllzGUiES8 )   if ( ZQr9x )   V9LTtRjSZwIW8a0oUlVZ 
    > ;
int 


  if ( qpUwJg0b1sqT )   x6P ;
else   if ( aFYBr1MdmrYp1FNugAAk )   Tgf_DZBOlNrpt 
    ;


}
<= int ;
float 